# vue3test

./: .gitignore  README.md  certfile.pem  certfile.pen  coding.py  frontend.py  inputs.yaml  keyfile.pem  main.py  package-lock.json  package.json  requirements.txt  server.py  vue.config.js  webargs.py
.github/workflows/: python-package-pulish.yaml
backend-python/: calculator.py  ioform.py  main.py  test.py
backend-python/buildtree/: setup.cfg
backend-python/buildtree/src/ioform/: __init__.py
python/: main.py  requirements.txt
python-ioform/: ioform.py
python-ioform/buildtree/: MANIFEST.in  setup.cfg
src/: App.vue  main.js  store.js
src/components/: Header.vue  Input.vue  InputForm.vue  Input_old.vue  Login.vue  Output.vue  SocketIoClient.js
