[metadata]
name = ioform
version = 0.0.13
author = ucipass
author_email = ucipass@gmail.com
description = Input Output Web Form
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ucipass/frontent
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    tornado
    python-socketio
    pyyaml
    cryptography>=3.3.1,<4.0.0
include_package_data=True
[options.packages.find]
where = src